[tool.poetry]
name = "fastapi restapi app backbone"
version = "0.1.0"
description = "fastapi restapi app backbone"
authors = ["Quang Nguyen"]


[[tool.poetry.source]]
name = 'Tony Nguyen'
url = 'https://tonydeveloper.com'

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.6.1"
gunicorn = "^19.9"
fastapi = "^0.29"
pydantic = {version = "^0.26.0",extras = ["email"]}
passlib = {version = "^1.7",extras = ["bcrypt"]}
pyjwt = "^1.7"
alembic = "^1.0"
python-slugify = "^3.0"
Unidecode = "^1.0"
python-dotenv = "^0.10.1"
databases = "^0.2.1"
motor = "2.2.0"
python-multipart = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.black]
exclued = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

